🎉auto update by Gmeek action

--- a/backup/究竟什么才是长期主义？.md
+++ b/backup/究竟什么才是长期主义？.md
@@ -1,5 +1,4 @@
-
-个人认为，长期主义的前提是选择正确的方向。我们都知道，现在长期主义是一个非常热门的词汇，Google指数长期霸榜前时十的存在。
+个人认为，长期主义的前提是选择正确的方向。我们都知道，现在长期主义是一个非常热门的词汇，Google指数长期霸榜前十的存在。
 
 但是究竟什么才是长期主义呢？我想没有一个人可以回答的很清楚，很有说服力。我见过的很多人都会给自己一个标签：长期主义者。但是如果我问他，你做为一个长期主义者，这些年是怎么贯彻长期主义呢？这时候，他们往往答非所问。自己在做的某件事，或者说多件事，都在坚持做，这就是长期主义。但是这个答案其是并不能把我说服。
 
